--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>scrolling-ai-insights</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Organización Peruana de IA</title>
+    <meta name="description" content="Promovemos la innovación y el uso ético de la IA para el desarrollo del país y el bienestar ciudadano." />
+    <meta name="author" content="OPAI" />
     <meta property="og:image" content="/og-image.png" />
   </head>
 
