--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Organización Peruana de IA</title>
     <meta name="description" content="Promovemos la innovación y el uso ético de la IA para el desarrollo del país y el bienestar ciudadano." />
     <meta name="author" content="OPAI" />
-    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:image" content="/og-img.png" />
   </head>
 
   <body>
