--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <meta name="description" content="Promovemos la innovación y el uso ético de la IA para el desarrollo del país y el bienestar ciudadano." />
     <meta name="author" content="OPAI" />
     <meta property="og:image" content="/og-img.png" />
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0WNSYFL6LZ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-0WNSYFL6LZ');
+    </script>
   </head>
 
   <body>
